Fix(FormTextArea): Correct z-index.

--- a/src/components/FormFields/FormTextArea/FormTextAreaFormatted.module.css
+++ b/src/components/FormFields/FormTextArea/FormTextAreaFormatted.module.css
@@ -3,6 +3,10 @@
     border-color: #e4e7ea !important;
 }
 
+.SunEditor :global .se-container {
+    z-index: 0;
+}
+
 .SunEditor :global .se-toolbar {
     border-bottom: 1px solid #e4e7ea;
     outline: 0;
